--- a/public/index.html
+++ b/public/index.html
@@ -7,54 +7,121 @@
   <script src="./js/controllers.js"></script>
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./foundation/css/foundation.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css" type="text/css" />
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick-theme.css" type="text/css" />
+
   
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 
 
 <body>
+	<section id="navbar">
+		<div class="fixed sticky">
+			<nav class="top-bar" data-topbar role="navigation">
+			  <ul class="title-area">
+			    <li class="name">
+			      <h1><a href="#">MP2</a></h1>
+			    </li>
+			     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+			    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+			  </ul>
 
-	<nav class="top-bar" data-topbar role="navigation">
-	  <ul class="title-area">
-	    <li class="name">
-	      <h1><a href="#">MP2</a></h1>
-	    </li>
-	     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-	    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-	  </ul>
-
-	  <section class="top-bar-section">
-	    <!-- Left Nav Section -->
-	    <ul class="left">
-	      <li><a href="https://courses.engr.illinois.edu/cs498rk1/index.html">CS498RK</a></li>
-	    </ul>
-	  </section>
-	</nav>
-
-	<div class="row" ng-app = "demoApp">
-		<div class="panel small-centered columns small-12 medium-4">
-    	<input id="nameInput" ng-model="name" placeholder="Your Name" autofocus>
-	
-		<h3>Hello, {{name}}</h3>
-
+			  <section class="top-bar-section">
+			    <!-- Left Nav Section -->
+			    <ul class="right">
+			      <li><a href="#">Home</a></li>
+			      <li><a href="#portfolio">Portfolio</a></li>
+			      <li><a href="#about">About</a></li>
+			      <li><a href="#contact">Contact</a></li>
+			    </ul>
+			  </section>
+			</nav>
 		</div>
-	</div>
-	<div class="row">
-		<div class="alert columns small-12 large-6">
-			<div><img src="http://lorempixel.com/400/200/cats" /></div>
+	</section>
 
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit velit temporibus, fugit recusandae aliquid officiis molestias possimus reprehenderit quos. Facere dolores, nulla optio recusandae. Voluptatibus aut esse nulla saepe sit ut amet, neque officia officiis quam ea ex adipisci, quaerat, eligendi veniam iste temporibus. Aperiam ea quos fugiat provident, voluptatum reiciendis mollitia voluptates, odio quam at, deserunt animi voluptas odit aliquid saepe voluptate distinctio excepturi. Deserunt, id esse fuga cum accusantium eos obcaecati odit veritatis molestias illum sequi repellat, quisquam quasi architecto velit blanditiis perferendis, nulla eligendi non laboriosam. Eligendi sint, voluptatem ipsam dolore eum temporibus dicta, quaerat ea molestias placeat, asperiores minima sit explicabo! Repellat qui ducimus ipsum. Dignissimos at, aliquid vitae asperiores omnis provident voluptatibus, itaque delectus. Porro corrupti vel culpa, delectus in doloremque nam ratione aliquid ullam non iusto magnam, repudiandae, magni a quasi voluptatum inventore exercitationem quibusdam sint autem totam ex quia possimus. Similique ad fugiat eligendi magnam ab, ex nulla unde eos, tempora quis consequatur maxime inventore perferendis voluptatem non nam dignissimos voluptatum dolor quasi quidem molestias maiores doloribus. Omnis ipsa fugit amet! Eum repellat deleniti fuga omnis in maiores rem iusto, qui quasi ipsum illum odit laudantium molestiae, nostrum ipsam fugit animi atque! Non.
+	<section id="HomeSection">
+		<div class="row"><div class="small-6 small-centered columns">
+			<p>Welcome!</p>
+		</div></div>
+		<div class="row"><div class="small-12 medium-centered columns">
+			<a href="#" data-reveal-id="myModal">
+				<img src="./images/svg/play38.svg">
+			</a>
+		</div></div>
+		<div id="myModal" class="reveal-modal medium" data-reveal>
+		  <h2>Modal with a Video</h2>
+		  <div class="row"><div class="small-10 small-centered columns">
+		  	<video autoplay loop>
+				<source src="./videos/BigCity1.mp4" type="video/mp4">
+			</video>
+		  </div></div>
+		  <a class="close-reveal-modal">&#215;</a>
 		</div>
-		<div class="columns small-12 large-6">
-	  	<div><img src="http://lorempixel.com/400/200/nature" />	</div>
-	  	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt nobis facere sint placeat necessitatibus reprehenderit amet quas minima beatae illo nemo labore, maxime adipisci, accusamus voluptates repudiandae quia, ut excepturi ea quis obcaecati molestias error architecto unde? Hic vel facere porro magnam ipsam omnis eos ducimus, architecto velit beatae modi natus sunt suscipit quo optio qui repellat, blanditiis consequuntur. Fuga omnis porro quis inventore in voluptatum veritatis illum beatae rem. Labore nam saepe cupiditate quod, itaque quidem libero, quas tempore incidunt, quos earum repudiandae recusandae quia voluptas ducimus inventore, expedita. Alias minima, commodi aut, aspernatur laborum quae mollitia pariatur suscipit ad accusamus a ipsam fuga necessitatibus voluptas esse error reprehenderit provident. Sequi architecto ipsum qui enim labore sunt incidunt ullam pariatur. Minus porro error ipsa perferendis exercitationem debitis dicta asperiores nostrum cum voluptas qui dolores odit numquam incidunt cumque eos nemo architecto repudiandae adipisci, eius ut, aut suscipit minima perspiciatis consectetur. Ratione quisquam neque voluptatem? Qui, aspernatur iste quaerat iure. Debitis nobis minus animi mollitia libero temporibus perferendis ratione, inventore ullam, eos ut porro, velit quibusdam rerum possimus, ex! Quidem consectetur obcaecati ad veritatis. Velit illum aliquid tenetur, nisi illo quaerat labore nemo id sequi eveniet consequuntur. Voluptate, similique, rem!</div>
-	</div>
+	</section>
+
+	<section id="PortfolioSection">
+		<a name="portfolio"></a>
+		<div class="row"><div class="small-12 small-centered columns">
+			<div class="carousel" data-slick='{"slideToShow": 1, "dots": true, "fade": true, "centerMode": true}'>
+			  <div><img src="./images/wave_break.jpg"></div>
+			  <div><img src="./images/dock.jpg"></div>
+			  <div><img src="./images/dusk.jpg"></div>
+			  <div><img src="./images/rolling_hills.jpg"></div>
+			</div>
+		</div></div>
+	</section>
+
+	<section id="AboutSection">
+		<a name="about"></a>
+		<div class="row">
+			<div class="small-4 columns">
+				<img id="myselfIcon" src="images/icon_me.jpg">
+			</div>
+			<div class="small-8 columns">
+				<p id="about_me_title">All About Me!</p>
+				<div id="about_me_textbox">
+					<p>My name is Kody and I am currently a senior studying computer science. This webpage is to display a variety of my interests and skills. These range from my personal interests, to photography, to my technical programming skills. I am interested in learning more about web programming and improving my skills. Outside of school and work, I enjoying catching up with friends, checking out local music and food festivals and anything pumpkin or apple flavored!
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="ContactSection">
+		<a name="contact"></a>
+		<div class="row">
+			<div class="small-12 small-centered columns">
+				<p>Find and Follow me on Social Media!</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="small-2 small-offset-3 columns">
+				<a href="http://facebook.com/kodyb43" target="_blank">
+					<img src="images/social_media/facebook.png">
+				</a>
+			</div>
+			<div class="small-2 columns">
+				<a href="http://instagram.com/kodyb43/" target="_blank">
+					<img src="images/social_media/instagram.png">
+				</a>
+			</div>
+			<div class="small-2 columns" style="float: left">
+				<a href="http://twitter.com/SmithKody" target="_blank">
+					<img src="images/social_media/twitter.png">
+				</a>
+			</div>
+		</div>
+	</section>
+	<section class="footer">
+	</section>
  
 
-
-  <script src="./js/script.js"></script>
   <script src="./lib/jquery-2.1.3.min/index.js"></script>
+  <script src="./js/script.js"></script>
   <script src="./foundation/js/foundation.min.js"></script>
+  <script> $(document).foundation(); </script>
   <script src="http://localhost:35729/livereload.js"></script>
+  <script src="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js" type="text/javascript"></script>
 </body>
 </html>
