fixed background image problem

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
 		</div></div>
 	</section>
 
-	<section id="AboutSection">
+	<section id="AboutSection" style='background-image: url("./images/chevron_stripe.png")'>
 		<a name="about"></a>
 		<div class="row">
 			<div class="small-4 columns">
